--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,12 @@
   "author": "fahmi and hilman",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
     "concurrently": "^7.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
-    "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
